# PulseWire

./: Doxyfile  License.txt  README.md  library.properties
docs/: Architecture.md  BitFrequency.md  Codecs.md  FramingModes.md  IRProtocols.md  Preambles.md
docs/html/: Codec_8h_source.html  Codecs_8h_source.html  Config_8h_source.html  DifferentialManchesterCodec_8h_source.html  DriverArduino_8h_source.html  DriverESP32_8h_source.html  DriverGeneric_8h_source.html  DriverRP2040_8h_source.html  IRProtocolDetector_8h_source.html  IRProtocol_8h_source.html  IRTransceiver_8h_source.html  IR_8h_source.html  IrDriverESP32_8h_source.html  IrDriverRP2040_8h_source.html  IrRxDriverESP32_8h_source.html  IrRxDriverRP2040_8h_source.html  IrTxDriverESP32_8h_source.html  IrTxDriverRP2040_8h_source.html  Logger_8h_source.html  ManchesterCodec_8h_source.html  MillerCodec_8h_source.html  NRZCodec_8h_source.html  Preamble_8h_source.html  Preambles_8h_source.html  ProtocolDetector_8h_source.html  PulseDistanceCodec_8h_source.html  PulseWidthCodec_8h_source.html  RZCodec_8h_source.html  RecorderCodec_8h_source.html  RingBuffer_8h_source.html  RxDriverArduino_8h_source.html  RxDriverESP32_8h_source.html  RxDriverGeneric_8h_source.html  RxDriverRP2040_8h_source.html  RxDriver_8h_source.html  SignalBase_8h_source.html  TransceiverConfig_8h_source.html  Transceiver_8h_source.html  TxDriverArduino_8h_source.html  TxDriverCommon_8h_source.html  (+527 more)
src/: Codecs.h  DriverArduino.h  IRTransceiver.h  Preambles.h  Transceiver.h  TransceiverConfig.h
tests/decoding/: CMakeLists.txt  decoding.cpp
(+119 files in other folders)
